--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h3 class="font-weight-bold mt-5 alves"><img src="assets/img/ALVES.png" alt="" width="65px"> PROPOSTA DE
                     SERVIÇOS JURÍDICOS</h3>
 
-                <h3 class="text-justify mt-3 mb-3 font-weight-bold">a. CONSULTE NOSSOS ADVOGADOS.</h3>
+                <h3 class="text-justify mt-3 mb-3 font-weight-bold">a. CONSULTE NOSSO CORPO DE ADVOGADOS.</h3>
 
 
                 <!--Proposta Contabil//-->
@@ -110,7 +110,7 @@
                     um salário mínimo vigente R$ 1320,00 (por cada empresa);<br></h3>
                     <h3 class="text-justify mt-3 mb-3 "><span class="font-weight-bold"> b. Observação,</span> a seguinte proposta inclui: <br> <span class="font-weight-bold"> 1-</span>Análise Fiscal para redução da carga tributária; <br> <span class="font-weight-bold">2-</span> Análise no Departamento Pessoal para verificar enquadramento de cargos e salários; <br> <span class="font-weight-bold">3-</span> Análise Contábil com demonstrativos trimestrais, apresentando os resultados da empresa; </h3>
                     <h3 class="text-justify mt-3 mb-3 "><span class="font-weight-bold">c. Documentos Necessarios</span>  para o planejamento tributário: <br><span class="font-weight-bold">1-</span>Certificado digital A1; <br><span class="font-weight-bold">2-</span>Folha de pagamento dos 3 últimos meses; <br><span class="font-weight-bold">3-</span>Senha da prefeitura;</h3>
-                    <h3 class="text-justify  text-center mb-3 font-weight-bold">Após o fechamento do contrato o prazo para a apresentação do planejamento e possíveis recuperações tributárias será de 15 dias.</h3>
+                    <h3 class="text-justify  text-center mb-3 font-weight-bold">Após a assinatura do contrato o prazo para a apresentação do planejamento e possíveis recuperações tributárias será de 15 dias.</h3>
                 <h3 class="font-weight-bold mt-5 gratia"><img src="assets/img/GRATIA.png" alt="" width="55px">
                     PROPOSTA DE CONSULTORIA EM SEGUROS</h3>
                 <h3 class="text-justify mt-3 mb-3 font-weight-bold">a. CONSULTE NOSSOS CONSULTORES.</h3>
